feat: update AddedRemovedSurveillanceRequirementActivity to no longer use deprecated attributes
OCD-4029